--- a/auctions/static/auctions/css/styles.css
+++ b/auctions/static/auctions/css/styles.css
@@ -154,6 +154,13 @@ h2{
     transform: scale(1.2);
 }
 
+.watchlist_star{
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin: 20px 20px 0px 0px;
+}
+
 .listing_sub_info{
     font-family: 'IBM Plex Serif', serif;
     font-weight: bold;
