--- a/auctions/static/auctions/css/styles.css
+++ b/auctions/static/auctions/css/styles.css
@@ -136,6 +136,31 @@ h2{
 
 /*---------- LISTING ----------*/
 
+.closed_overlay{
+    opacity: 0.8;
+    background: #000;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    position: fixed;
+}
+
+.closed_sign{
+    margin-top: 150px;
+    margin-left: -40px;
+    height: 300px;
+    width: 650px;
+    position: relative;
+}
+
+.closed_message{
+    margin-top: 250px;
+    margin-left: -100px;
+    font-size: 40px;
+}
+
 .listing_box{
     border: none;
 }
