--- a/auctions/static/auctions/css/styles.css
+++ b/auctions/static/auctions/css/styles.css
@@ -65,6 +65,37 @@ h2{
     color: #E85A4F;
 }
 
+.center_message{
+    margin: auto;
+    width: 60%;
+    color: #8ee4af;
+    text-align: center;
+}
+
+/*---------- FORMS ----------*/
+.form_box{
+    border: solid #FBEEC1;
+    border-radius: 20px;
+    padding: 15px 20px 15px 20px;
+    width: 60%;
+    margin: auto;
+    text-align: center;
+}
+
+.cream_line{
+    background-color: #FBEEC1;
+}
+
+/*---------- CREATE PAGE ----------*/
+.create_box{
+    border: solid #FBEEC1;
+    border-radius: 20px;
+    padding: 15px 20px 15px 20px;
+    width: 90%;
+    margin: auto;
+    text-align: center;
+}
+
 /*---------- INDEX PAGE ----------*/
 
 .active_listing_link_box:link, .active_listing_link_box:visited{
