--- a/auctions/templates/auctions/login.html
+++ b/auctions/templates/auctions/login.html
@@ -4,23 +4,25 @@
 
 {% block body %}
 
-    <h2>Login</h2>
-
     {% if message %}
-        <div>{{ message }}</div>
+        <div class="center_message">{{ message }}</div>
+        <br>
     {% endif %}
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
-
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    <div class="form_box center-form">
+        <h2>Login</h2>
+        <form action="{% url 'login' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <input class="btn btn-primary bid_button" type="submit" value="Login">
+        </form>
+        <hr class="cream_line">
+        Don't have an account?<br> <a href="{% url 'register' %}">Register here.</a>
+    </div>
 
 {% endblock %}
