--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -2,17 +2,27 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <title>AuctionIt{% block title %}{% endblock %}</title>
+
+        <!--Page Icon in Tab-->
         <link rel="icon" href="{% static 'auctions/images/logo.png' %}">
+
         <!--Linking online .css file for social media icons-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <!--Linking Bootstarp Packages-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'auctions/css/styles.css' %}" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+        <!--Linking local .css file-->
+        <link href="{% static 'auctions/css/styles.css' %}" rel="stylesheet">
+
     </head>
+
     <body>
         <div class="sticky-top navigation_bar">
             <nav class="navbar top_navbar">
@@ -45,7 +55,6 @@
                     </ul>
                 {% endif %}
             </nav>
-
             <nav class="navbar below_navbar">
                 <ul class="nav">
                     <li class="nav-item">
@@ -74,12 +83,14 @@
                         <a class="nav-link a_non_link navigating_link" href="{% url 'create' %}">Create Listing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link a_non_link navigating_link" href="#">About Us</a>
+                        <a class="nav-link a_non_link navigating_link" href="{% url 'about' %}">About Us</a>
                     </li>
                 </ul>
             </nav>
         </div>
+
         {% block body %}
         {% endblock %}
+
     </body>
 </html>
