--- a/auctions/templates/auctions/about.html
+++ b/auctions/templates/auctions/about.html
@@ -16,7 +16,7 @@
                     Chaitanya is currently studying Computer Engineering at <a href="https://www.slrtce.in/" target="_blank">L.R Tiwari College of Engineering</a> which comes under the esteemed Mumbai University.
                     Chaitanya has been pursuing is life long dream of becoming a successful Computer Engineer since 3rd Grade.<br>
                     <br>
-                    This website represents a online auction bidding site, wherein users can publish listings of the items they want to sell. For more information, demonstartion and usage of this website, kindly visit <a href="#" target="_blank">#</a>.
+                    This website represents a online auction bidding site, wherein users can publish listings of the items they want to sell. For more information, demonstartion and usage of this website, kindly watch <a href="https://youtu.be/RZUgXt75px0" target="_blank">this video</a>.
                     <br><br>
                     <i class="fa fa-instagram" onclick="window.open('http://www.instagram.com/itsme.cmn22','_blank')" style="font-size:1.4em"> itsme.cmn22</i>
                     <br><br>
