--- a/auctions/templates/auctions/about.html
+++ b/auctions/templates/auctions/about.html
@@ -11,12 +11,11 @@
             <div class="col-sm-8 col-12">
                 <p class="ContactInfo">
                     This site has been developed and is being maintained by Chaitanya Malani.<br>
-                    This site has been developed as a project which has to be submitted for completion of the <a href="https://cs50.harvard.edu/web/2020/projects/2/commerce/" target="_blank">Project2</a> of <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript" target="_blank">Web Programming with Python and JavaScript</a>.<br>
                     <br>
-                    Chaitanya is currently studying Computer Engineering at <a href="https://www.slrtce.in/" target="_blank">L.R Tiwari College of Engineering</a> which comes under the esteemed Mumbai University.
-                    Chaitanya has been pursuing is life long dream of becoming a successful Computer Engineer since 3rd Grade.<br>
                     <br>
-                    This website represents a online auction bidding site, wherein users can publish listings of the items they want to sell. For more information, demonstartion and usage of this website, kindly watch <a href="https://youtu.be/RZUgXt75px0" target="_blank">this video</a>.
+                    I am an aspiring software engineer who is currently studying Computer Science in Mumbai, India. I love to code and explore various fields within computers. Also I am a very big football enthusiast and I love supporting Manchester United F.C.
+                    <br><br>
+                    This website represents a online auction bidding site, wherein users can publish listings of the items they want to sell. For more information, demonstartion and usage of this website, kindly watch <a href="https://youtu.be/FUzSQ6Zw2vo" target="_blank">this video</a>.
                     <br><br>
                     <i class="fa fa-instagram" onclick="window.open('http://www.instagram.com/itsme.cmn22','_blank')" style="font-size:1.4em"> itsme.cmn22</i>
                     <br><br>
